# RainCLI

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: CMakeCXXCompilerId.cpp.BA20722CC939002E.idx  ITerminalIO.hpp.C23D171027F292FC.idx  StandartTerminal.hpp.52D3641A60149042.idx  Terminal.cpp.7A0AEC27B2D88DF8.idx  main.cpp.8921660B706C5655.idx  test_Terminal.cpp.979AD0312298B7F8.idx
include/: ITerminalIO.hpp  StandartTerminal.hpp
src/: CMakeLists.txt  Terminal.cpp  main.cpp
tests/: CMakeLists.txt  test_Terminal.cpp
